# tsutsuji-trackcomputer

./: CHANGELOG.md  README.md  setup.cfg
docs/: .buildinfo  cfgfileformat.html  genindex.html  handlingkp.html  index.html  keyshortcut.html  mediantrack.html  modules.html  objects.inv  py-modindex.html  refelenceguide.html  reference_height.html  reference_heightmeasure.html  reference_main.html  reference_measure.html  reference_menu.html  reference_startup.html  referenceguide.html  search.html  searchindex.js  trackfileformat.html  tsutsuji.backimg.html  tsutsuji.config.html  tsutsuji.cui2.html  tsutsuji.drawcursor.html  tsutsuji.gui_tsutsuji.html  tsutsuji.html  tsutsuji.math.html  tsutsuji.measure.html  tsutsuji.solver.html  tsutsuji.track_control.html  tsutsuji.trackwindow.html  tutorial.html  tutorial_backimg.html  tutorial_ctsolver.html  tutorial_first.html  tutorial_for_v1.1.html  tutorial_maptile.html
docs_src/: cfgfileformat.rst  conf.py  handlingkp.rst  index.rst  keyshortcut.rst  mediantrack.rst  reference_height.rst  reference_heightmeasure.rst  reference_main.rst  reference_measure.rst  reference_menu.rst  reference_startup.rst  referenceguide.rst  trackfileformat.rst  tsutsuji.rst  tsutsuji.track_control.rst  tsutsuji.trackwindow.rst  tutorial.rst  tutorial_backimg.rst  tutorial_ctsolver.rst  tutorial_for_v1.1.rst  tutorial_maptile.rst  tutorial_measure.rst
tsutsuji/: __main__.py  _version.py  backimg.py  backimg_height.py  config.py  cui.py  cui2.py  curvetrackplot.py  drawcursor.py  gui_interface.py  gui_tsutsuji.py  heightmeasure.py  heightsolver.py  (+10 more)
(+93 files in other folders)
