[metadata]
name = tsutsuji-trackcomputer
version = attr: tsutsuji._version.__version__
description = Track building helper for Bve trainsim 5/6
long_description = file: README.md
long_description_content_type = text/markdown
keywords = BVE trainsim
license = Apache License 2.0
author = Konawasabi
author_email = webmaster@konawasabi.riceball.jp
url=https://github.com/konawasabi/tsutsuji-trackcomputer/

[options]
packages = tsutsuji
python_version >= "3.6"
install_requires =
    kobushi-trackviewer >= "1.1.4"
    requests >= "2.28.1"
include_package_data = True
